# harz-deforestation-eopf

./: README.md  data_load.ipynb  environment_eopf.yml  main.ipynb  optional.ipynb  pyproject.toml  requirements.txt
data_region.zarr/: .zmetadata
data_region.zarr/b02/: .zarray  0.0  0.1  1.0  1.1
data_region.zarr/b03/: .zattrs  0.0  0.1  1.0  1.1
data_region.zarr/b04/: .zarray  0.0  0.1  1.0  1.1
data_region.zarr/b08/: 0.0  0.1  1.0  1.1
data_region.zarr/ndvi/: 0.0  0.1  1.0  1.1
data_region.zarr/time/: .zattrs
data_region.zarr/x/: .zarray  0
data_region.zarr/y/: .zarray  0
modules/: utils.py
resources/: Bounding_Box_EPSG4326.geojson  Nationalpark_Harz_boundaries.geojson
