[project]
name = "harz-deforestation-eopf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "distributed>=2025.11.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy>=2.2.6",
    "pystac-client>=0.9.0",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "s3fs>=2025.10.0",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "xarray>=2025.6.1",
    "xarray-eopf>=0.2.4",
    "zarr>=2.18.3",
]
